# ActivationEdits

./: .gitignore  README.md  main.py  pyproject.toml
act_edit/: act_separation.py
act_edit/output/: programming_pivot.csv
config/: coding.yaml  diff_coding.yaml  general.yaml  lang_split.yaml  reduced_error.yaml  train_low_rank.yaml  unsafe.yaml
data/CVEFixes/: README.md  cwe_label.py  download_CWE_desc.py  download_cwe_kaggle.sh  language_analysis.py  language_analysis_split.py  language_split.py
data/train/sample_0/: dataset_info.json  state.json
data/train/sample_1/: state.json
outputs/2026-05-31/14-02-09/.hydra/: hydra.yaml
outputs/2026-05-31/14-03-21/.hydra/: hydra.yaml
outputs/2026-05-31/14-04-12/.hydra/: hydra.yaml
outputs/2026-05-31/14-04-49/.hydra/: config.yaml  hydra.yaml
outputs/2026-05-31/14-05-26/.hydra/: hydra.yaml
outputs/2026-05-31/14-06-05/.hydra/: hydra.yaml
outputs/2026-05-31/16-22-47/.hydra/: config.yaml  hydra.yaml
outputs/2026-06-01/14-44-54/.hydra/: hydra.yaml
outputs/2026-06-01/18-15-24/.hydra/: hydra.yaml
outputs/2026-06-01/18-39-07/.hydra/: hydra.yaml
outputs/2026-06-01/18-41-39/.hydra/: hydra.yaml
outputs/2026-06-01/18-45-07/.hydra/: hydra.yaml
outputs/2026-06-01/19-44-52/.hydra/: config.yaml  hydra.yaml
outputs/2026-06-02/06-02-35/.hydra/: config.yaml  hydra.yaml
train_low_rank/: prepare_data.py  train.py
