[project]
name = "activationedits"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.8.5",
    "dotenv>=0.9.9",
    "huggingface-hub>=1.17.0",
    "hydra-core>=1.3.2",
    "langchain>=1.3.2",
    "langchain-chroma>=1.1.0",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.2",
    "logger>=1.4",
    "omegaconf>=2.3.0",
    "pandas>=3.0.3",
    "peft>=0.19.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.5.1",
    "transformers>=5.9.0",
    "vllm>=0.22.0",
]
